# gutta

./: LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
docs/: assets.md  content.md  extras.md  installation.md  styling.md  usage.md
src/gutta/: __init__.py  cli.py  webserver.py
src/gutta/builder/: __init__.py  addresses.py  assets.py  blobs.py  dates.py  exceptions.py  extras.py  feeds.py  gutta_info.py  localpaths.py  mountpoints.py  pages.py  resources.py  specs.py  style.py  wcnode.py  wctree.py
src/gutta/builder/resources/: Thumbs.db  gutta.scss
src/gutta/builder/templates/: autogenerated_warning.jinja  base.jinja  core.jinja  extra.jinja  gallery.jinja  gallery_inner.jinja  opengraph.jinja  redirect.jinja  scroll.jinja  scroll_inner.jinja  toc_inner.jinja  trickle_inner.jinja
src/gutta/sample_comic/_source/: about.md  style.scss  webcomic.yaml
src/sample_comic/: index.html
src/sample_comic/_source/: vars.scss  webcomic.yaml
src/sample_comic/iss_1/: index.html
src/sample_comic/iss_2/: index.html
src/sample_comic/source/: webcomic.yaml
