[project]
name = "gutta"
authors = [{name="cancrizans", email="cancrizans.canon@gmail.com"}]
readme = "README.md"
dynamic = ["version"]
description = "A simple, modular static site builder for webcomics."
requires-python = ">=3.10"

license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click",
    "jinja2",
    "pyyaml",
    "oyaml",
    "markdown"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/cancrizans/gutta"
"Bug Tracker" = "https://github.com/cancrizans/gutta/issues"

[project.scripts]
gutta = "src.gutta.cli:main"

[tool.hatch.version]
path = "src/gutta/__about__.py"